# python-projects

./: .gitignore  ExpressionScope.GeoFunctions.DWithin.cs  ExpressionScope.GeoFunctions.cs  Mods.csv  QueryExpression-titulo.ts  chips.py  crearmd.py  create_md.py  custoers_from_square.json  employees.json  hola.py  map.html  maplarge.js  mod_data_enriched.csv  mod_data_partial_10.csv  mod_data_partial_20.csv  mod_data_partial_30.csv  mod_data_partial_40.csv  mod_data_partial_50.csv  mod_data_partial_60.csv  mod_data_partial_70.csv  mod_information.csv  phase2.py  remove_bg.py  requirements.txt  split.py  table.txt  text.txt  to_svg.py  to_webp.py  trabajo.bat  tutorial.md  users_data.json  vectorice.py  video_down.py  virtual_env.md  wkt.py
docker/: Dockerfile
js/: format.js  map.html  maplarge.js  text.txt
md/: InscribedCircle.md  InscribedCircleCoords.md  LastPoint.md  MLXF_test_mytableNshapes_86d725fbcae6927fe845174adae6667c.csv  NPoints.md  NShapes.md  QueryExpression-CreateLine.md  QueryExpression-CreateShape.md  QueryExpression-CreateShape.ts  QueryExpression-DWithin.md  QueryExpression-Difference.md  QueryExpression-FirstPoint.md  QueryExpression-GeoDistance.md  QueryExpression-GetUTMZoneBounds.md  QueryExpression-GetUTMZoneBounds.ts  QueryExpression-LastPoint.md  QueryExpression-ProjectedWKT.md  QueryExpression-Stitch.md  bbox.md  testshapes.csv
myenv/: pyvenv.cfg
python/: fetch_comments.py  generate_user_time.py  generate_users.py  installation.py  (+15 more)
rust/convert/: Cargo.toml  instructions.md
rust/convert/src/: convert.rs  main.rs  menu_installer.rs
(+31 files in other folders)
